--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ window.onload = function() {
     window.location.href = "/login.html"; // Redirect to login if no token
 }
 
-
+import { SpeedInsights } from "@vercel/speed-insights/next"
     
     </script>
     <script>
