--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@ window.onload = function() {
             <div class="header-buttons">
                 <select onchange="handleSelectionChange(event)">
                     <option value="">Select a Subject</option>
+                    <option value="ui.html">User Interface (UI)</option>option>
                     <option value="Cpp.html">C++</option>
                     <option value="Communication-Skill.html">Communication Skill</option>
                 
