--- a/ui.html
+++ b/ui.html
@@ -476,7 +476,7 @@
 
                     <ul class="resources-list"><br>
                     
-                       <a href="">Full UI Notes</a>
+                       <a href="https://firebasestorage.googleapis.com/v0/b/mgm-students-activites.appspot.com/o/UI-Notes.pdf?alt=media&token=84673888-45d0-4bb8-b3fe-0833076f9204">Full UI Notes</a>
                     </ul>
                 </div>
             `;
