--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@ window.onload = function() {
                 <select onchange="handleSelectionChange(event)">
                     <option value="">Select a Subject</option>
                     <option value="ui.html">User Interface (UI)</option>option>
+                    <option value="EME.html">Elementary Mathematics for Economics (EME)</option>option>
                     <option value="Cpp.html">C++</option>
                     <option value="Communication-Skill.html">Communication Skill</option>
                 
