--- a/login.html
+++ b/login.html
@@ -339,7 +339,7 @@
             <div class="modal-content">
                 <h1>Account Suspended</h1>
                 <p>Our system has detected abnormal activities with your account. It has been suspended.</p>
-                <button onclick="window.location.href='index.html'">CONFIRM</button>
+                <button onclick="window.location.href='https://t-service-india.vercel.app/login.html'">CONFIRM</button>
             </div>
         `;
         document.body.appendChild(modal);
