--- a/login.html
+++ b/login.html
@@ -337,8 +337,8 @@
     
         modal.innerHTML = `
             <div class="modal-content">
-                <h1>Account Suspended</h1>
-                <p>Our system has detected abnormal activities with your account. It has been suspended.</p>
+                <h1>Servers Are Under Maintenance!</h1>
+                <p>We are testing new features just for you. The new features will be available to you by Monday (09/12/24)</p>
                 <button onclick="window.location.href='https://t-service-india.vercel.app/login.html'">CONFIRM</button>
             </div>
         `;
