--- a/login.html
+++ b/login.html
@@ -336,11 +336,12 @@
         modal.classList.add('modal');
     
         modal.innerHTML = `
-            <div class="modal-content">
-                <h1>Servers Are Under Maintenance!</h1>
-                <p>We are testing new features just for you. The new features will be available to you by Monday (09/12/24)</p>
-                <button onclick="window.location.href='https://t-service-india.vercel.app/login.html'">CONFIRM</button>
-            </div>
+           <div class="modal-content">
+    <h1>Servers Are Under Maintenance!</h1>
+    <p>We are currently testing new features. Please check back later.</p>
+    <button onclick="window.location.href='https://t-service-india.vercel.app/login.html'">CONFIRM</button>
+</div>
+
         `;
         document.body.appendChild(modal);
     
