--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@ window.onload = function() {
                 <a href="https://firebasestorage.googleapis.com/v0/b/mgm-students-activites.appspot.com/o/User-Manual%20for%20Student%20Portal.pdf?alt=media&token=8cb0ffb4-ea6e-4aca-afdd-6fe9d485bc46" class="user-manual-link">
                   <i class="fas fa-book"></i> User Manual
               </a>
-                  Manager: Abdullah Khan
+                  Manager: Prajakta Mane
                   <span class="info-icon">?</span>
-                  <span class="tooltip">They are staff of Zen-Tech. To contact the manager, mail to zentechindiaofficial@proton.me with secret code: #AK23IT, and our staff will notify your manager directly!</span>
+                  <span class="tooltip">They are staff of Zen-Tech. To contact the manager, mail to zentechindiaofficial@proton.me with secret code: #PM01IT, and our staff will notify your manager directly!</span>
               </p>
           </div>
           
@@ -367,8 +367,8 @@ window.onload = function() {
 
 
         <div class="marquee-container">
-          <div class="marquee-label">Info</div>
-         <marquee>We have added C++ Notes do check it out!</marquee>
+          <div class="marquee-label">What's New!</div>
+         <marquee>We have added new subject: Web-Designing, EME, ALP. More Subject will be added after confirmation from your CRs. </marquee>
         </div>
         <!-- Main Content -->
         <div class="main-content">
@@ -381,7 +381,7 @@ window.onload = function() {
     </div>
 
     <footer>
-        <p>2024 &copy; MGM_FY-IT | Designed & Developed by <a href="https://zen-tech.vercel.app/"> Zen-Tech</a> | Version: 3.30.2</p>
+        <p>2024 &copy; MGM_FY-IT | Designed & Developed by <a href="https://zen-tech.vercel.app/"> Zen-Tech</a> | Version: 3.35.2</p>
     </footer>
 
     <script>
