--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ window.onload = function() {
 
 
         <div class="marquee-container">
-          <div class="marquee-label">What's New!</div>
+          <div class="marquee-label">Info</div>
          <marquee>We have added new subject: Web-Designing, EME, ALP. More Subject will be added after confirmation from your CRs. </marquee>
         </div>
         <!-- Main Content -->
