--- a/Cpp.html
+++ b/Cpp.html
@@ -393,7 +393,9 @@
                     <ul class="resources-list"><br>
                       <h3>------ Sem 2 ----</h3>
                        <a href="https://firebasestorage.googleapis.com/v0/b/mgm-students-activites.appspot.com/o/c%2B%2B%20%5Binc%2C%20syllabus%2C%20chp%201%20chp2%20(intro)%5D.pdf?alt=media&token=3241bcd9-13f4-4ba7-b96f-064cf45e103b">C++ [Inc Syllabus + chp1 (full) + chp 2 (Intro)]</a>
-                    </ul>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/mgm-students-activites.appspot.com/o/chp-2%20ending%20part%20%2B%20chp%203%20intro.pdf?alt=media&token=ed6c343d-3042-4b0f-839a-0e8ad8c30b32">Chp-2-Ending + CHp-3-Intro</a>
+
+  </ul>
                 </div>
             `;
             break;
