--- a/Web-Design.html
+++ b/Web-Design.html
@@ -391,7 +391,9 @@
           
 
                     <ul class="resources-list">
-                   Last Updated: 14/12/2024 IST 8:32:10 AM<br><br>
+                   Last Updated: 14/12/2024 IST 4:32:10 PM<br><br>
+                                         <a href="https://firebasestorage.googleapis.com/v0/b/mgm-students-activites.appspot.com/o/syllabus%20of%20web%20design%5B1%5D.pdf?alt=media&token=b91ae42d-9fb3-4b46-9e35-357015dfda17">Syllabus</a> <br>
+
                       <a href="https://firebasestorage.googleapis.com/v0/b/mgm-students-activites.appspot.com/o/HTML%5B1%5D.pdf?alt=media&token=cd75429a-65fb-4e31-99d3-33585c33ccd8">Introduction to Html5</a>
                      
   </ul>
