--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ window.onload = function() {
                     <option value="">Select a Subject</option>
                     <option value="ui.html">User Interface (UI)</option>option>
                     <option value="Web-Design.html">Web Designing</option>option>
-                    <option value="#">Assembly Language Programming</option>option>
+                    <option value="alp.html">Assembly Language Programming</option>option>
                     <option value="EME.html">Elementary Mathematics for Economics (EME)</option>option>
                     <option value="Cpp.html">C++</option>
                     <option value="Communication-Skill.html">Communication Skill</option>
@@ -381,7 +381,7 @@ window.onload = function() {
     </div>
 
     <footer>
-        <p>2024 &copy; MGM_FY-IT | Designed & Developed by <a href="https://zen-tech.vercel.app/"> Zen-Tech</a> | Version: 3.41.2</p>
+        <p>2024 &copy; MGM_FY-IT | Designed & Developed by <a href="https://zen-tech.vercel.app/"> Zen-Tech</a> | Version: 3.45.2</p>
     </footer>
 
     <script>
