--- a/login.html
+++ b/login.html
@@ -253,7 +253,7 @@
      <!-- Video Overlay -->
      <div id="video-overlay">
       <video id="intro-video" autoplay playsinline>
-          <source src="https://firebasestorage.googleapis.com/v0/b/mgm-students-activites.appspot.com/o/intro-login.mp4?alt=media&token=6b24a2ac-3f15-41d7-952b-aa84587e138d" type="video/mp4">
+          <source src="https://firebasestorage.googleapis.com/v0/b/mgm-students-activites.appspot.com/o/student-portal-related%2FUntitled%20%E2%80%91%20Made%20with%20FlexClip%20(online-video-cutter.com).mp4?alt=media&token=9e720542-4de0-48b1-b592-b0a628ac5937" type="video/mp4">
           Your browser does not support the video tag.
         
       </video>
@@ -262,7 +262,7 @@
   <!-- Login Section -->
   <div class="login-container hidden" id="content">
     <div class="login-box">
-        <img src="https://teju0051.github.io/Assets/Student_Portal.png" alt="Zentech Logo" class="logo">
+        <img src="https://firebasestorage.googleapis.com/v0/b/mgm-students-activites.appspot.com/o/student-portal-related%2Fstudent%20portal-winter%20-theme.png?alt=media&token=e6e0f84b-c9fd-46a3-a22c-1f13658dc6d2" alt="Zentech Logo" class="logo">
         <h1>Welcome Students!</h1>
         <input type="text" placeholder="Username" class="input-field" id="username">
         <input type="password" placeholder="Password" class="input-field" id="password">
