--- a/ui.html
+++ b/ui.html
@@ -478,6 +478,7 @@
                        
                        <a href="https://firebasestorage.googleapis.com/v0/b/mgm-students-activites.appspot.com/o/UI-Notes.pdf?alt=media&token=84673888-45d0-4bb8-b3fe-0833076f9204">Full UI Notes</a>
                     <br>   <a href="https://mgmfyit.vercel.app/testing.html">Tue-source-code (images are not visible becoz the photos are stored locally!)</a>
+                  <br>   <a href="https://firebasestorage.googleapis.com/v0/b/mgm-students-activites.appspot.com/o/basic.html?alt=media&token=1a9fbde8-2f19-4e16-b40f-4602e6da4540">Bootstrap-Demo [AFTER OPENING THIS PRESS Crtl+U]</a>
                       </ul>
                 </div>
             `;
