--- a/Exam-Master.html
+++ b/Exam-Master.html
@@ -11,221 +11,222 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
 
 <style>
-    /* Global Styles */
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #101C1E; /* Midnight Green */
-    color: #E0F2F1; /* Light Mint Green */
-    margin: 0;
-    padding: 0;
-}
+  /* Global Styles */
+  body {
+      font-family: 'Arial', sans-serif;
+      background-color: #FAFAFA; /* Light Theme Background */
+      color: #333; /* Dark Text Color */
+      margin: 0;
+      padding: 0;
+  }
 
-/* Header Styles */
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 30px;
-    background-color: #004D40; /* Dark Green */
-    color: #E0F2F1; /* Light Mint Green */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-}
+  /* Header Styles */
+  .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 30px;
+      background-color: #FFFFFF; /* White Header */
+      color: #333;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
 
-.header h1 {
-    font-size: 26px;
-    display: flex;
-    align-items: center;
-}
+  .header h1 {
+      font-size: 26px;
+      display: flex;
+      align-items: center;
+  }
 
-.header h1::before {
-    content: '\f19d'; /* Font Awesome icon for graduation cap */
-    font-family: "Font Awesome 6 Free";
-    font-weight: 900;
-    margin-right: 10px;
-}
+  .header h1::before {
+      content: '\f19d'; /* Font Awesome icon for graduation cap */
+      font-family: "Font Awesome 6 Free";
+      font-weight: 900;
+      margin-right: 10px;
+  }
 
-/* Question Panel Styles */
-.question-panel {
-    height: 450px;
-    overflow-y: auto;
-    background-color: #263238; /* Dark Greyish Green */
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    padding: 20px;
-    border-left: 4px solid #00796B; /* Teal Green */
-    color: #E0F2F1;
-}
+  /* Question Panel Styles */
+  .question-panel {
+      height: 450px;
+      overflow-y: auto;
+      background-color: #FFFFFF; /* White Panel */
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      border-left: 4px solid #2196F3; /* Blue Border */
+      color: #333;
+  }
 
-.question-btn {
-    margin-bottom: 12px;
-    text-align: center;
-    font-size: 18px;
-    font-weight: bold;
-    color: #80CBC4; /* Lighter Teal */
-}
+  .question-btn {
+      margin-bottom: 12px;
+      text-align: center;
+      font-size: 18px;
+      font-weight: bold;
+      color: #000000;
+      cursor: pointer;
+  }
 
-.question-btn i {
-    margin-right: 8px;
-}
+  .question-btn i {
+      margin-right: 8px;
+  }
 
-/* Footer Styles */
-.footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #004D40;
-    padding: 15px 30px;
-    border-top: 1px solid #004D40;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.3);
-}
+  /* Footer Styles */
+  .footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: #F1F1F1;
+      padding: 15px 30px;
+      border-top: 1px solid #E0E0E0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  }
 
-.footer span {
-    font-size: 14px;
-    color: #B2DFDB; /* Light Mint Green */
-}
+  .footer span {
+      font-size: 14px;
+      color: #666;
+  }
 
-.footer .submit-btn {
-    padding: 12px 20px;
-    background-color: #00796B; /* Teal Green */
-    color: #E0F2F1;
-    border: none;
-    border-radius: 5px;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
+  .footer .submit-btn {
+      padding: 12px 20px;
+      background-color: #2196F3;
+      color: #FFF;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      transition: background-color 0.3s;
+  }
 
-.footer .submit-btn i {
-    margin-right: 8px;
-}
+  .footer .submit-btn i {
+      margin-right: 8px;
+  }
 
-.footer .submit-btn:hover {
-    background-color: #004D40;
-}
+  .footer .submit-btn:hover {
+      background-color: #1565C0;
+  }
 
-/* Form Label & Control */
-.form-label {
-    font-weight: bold;
-    color: #80CBC4;
-}
+  /* Form Label & Control */
+  .form-label {
+      font-weight: bold;
+      color: #333;
+  }
 
-.form-control {
-    border-radius: 8px;
-    border: 1px solid #80CBC4;
-    padding: 10px;
-    font-size: 16px;
-    background-color: #263238;
-    color: #E0F2F1;
-}
+  .form-control {
+      border-radius: 8px;
+      border: 1px solid #CCC;
+      padding: 10px;
+      font-size: 16px;
+      background-color: #FFF;
+      color: #333;
+  }
 
-.btn-primary {
-    border-radius: 5px;
-    font-weight: bold;
-    background-color: #00796B;
-    color: #E0F2F1;
-    border: none;
-}
+  .btn-primary {
+      border-radius: 5px;
+      font-weight: bold;
+      background-color: #2196F3;
+      color: #FFF;
+      border: none;
+  }
 
-.btn-primary:hover {
-    background-color: #004D40;
-}
+  .btn-primary:hover {
+      background-color: #1565C0;
+  }
 
-/* Footer Right Links */
-.footer-right {
-    font-size: 14px;
-    color: #80CBC4;
-}
+  /* Footer Right Links */
+  .footer-right {
+      font-size: 14px;
+      color: #2196F3;
+  }
 
-.footer-right a {
-    color: #80CBC4;
-    text-decoration: none;
-    font-weight: bold;
-}
+  .footer-right a {
+      color: #2196F3;
+      text-decoration: none;
+      font-weight: bold;
+  }
 
-.footer-right a:hover {
-    color: #004D40;
-    text-decoration: underline;
-}
+  .footer-right a:hover {
+      color: #1565C0;
+      text-decoration: underline;
+  }
 
-/* Cheating Detection Panel */
-.cheating-container {
-    display: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #263238;
-    padding: 30px;
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
-    text-align: center;
-    z-index: 9999;
-}
+  /* Cheating Detection Panel */
+  .cheating-container {
+      display: none;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #FFF;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      z-index: 9999;
+  }
 
-.cheating-container h2 {
-    color: #D32F2F;
-    font-size: 24px;
-    margin-bottom: 10px;
-}
+  .cheating-container h2 {
+      color: #D32F2F;
+      font-size: 24px;
+      margin-bottom: 10px;
+  }
 
-.cheating-container .details {
-    margin-bottom: 20px;
-    color: #E0F2F1;
-}
+  .cheating-container .details {
+      margin-bottom: 20px;
+      color: #333;
+  }
 
-.cheating-container button {
-    padding: 12px 24px;
-    background-color: #D32F2F;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
+  .cheating-container button {
+      padding: 12px 24px;
+      background-color: #D32F2F;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s;
+  }
 
-.cheating-container button:hover {
-    background-color: #B71C1C;
-}
+  .cheating-container button:hover {
+      background-color: #B71C1C;
+  }
 
-/* Spinner Container */
-#loading-spinner {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(16, 28, 30, 0.9);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-}
+  /* Spinner Container */
+  #loading-spinner {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(250, 250, 250, 0.9);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+  }
 
-/* Spinner Icon */
-#loading-spinner i {
-    font-size: 50px;
-    color: #80CBC4;
-    animation: spin 1.5s linear infinite;
-}
+  /* Spinner Icon */
+  #loading-spinner i {
+      font-size: 50px;
+      color: #2196F3;
+      animation: spin 1.5s linear infinite;
+  }
 
-/* Spinner Animation */
-@keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
+  /* Spinner Animation */
+  @keyframes spin {
+      from {
+          transform: rotate(0deg);
+      }
+      to {
+          transform: rotate(360deg);
+      }
+  }
 </style>
+
 </head>
 <body>
     <!-- Header -->
