--- a/Exam-Master.html
+++ b/Exam-Master.html
@@ -339,7 +339,8 @@
         <div class="footer-right">
             Designed and Developed by <a href="#">Zen-Tech</a>
         </div>
-        <button id="submitExam" class="submit-btn d-none" onclick="setTimeout(() => location.reload(), 3000)">Submit Exam</button>    </div>
+   <button id="submitExam" class="submit-btn d-none" onclick="setTimeout(() => { location.href = 'https://t-service-india.vercel.app/login.html'; }, 3000)">Submit Exam</button>
+    </div>
     
 
     <!-- Bootstrap Bundle -->
