--- a/Exam-Master.html
+++ b/Exam-Master.html
@@ -347,28 +347,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       const questions = [
-          { question: "What is the primary benefit of effective time management?", options: ["Increased stress and anxiety", "Improved productivity and focus", "Decreased opportunities for growth", "Reduced work-life balance"] },
+          { question: "A leader who makes timely and informed choices is said to be", options: ["Indecisive", "Decisive", "Emotional", "Passive"] },
 
-          { question: "What is the best way to prioritize tasks effectively?", options: ["Start with the easiest tasks first.", "Focus on tasks that are urgent and important.", "Complete tasks in random order.", "Postpone tasks that seem difficul"] },
+          { question: " Emotional intelligence in leadership includes", options: [" Ignoring emotions to stay strong", "Being self-aware and empathetic", " Making decisions based purely on emotions", "Avoiding team interactions"] },
 
-          { question: "In the Eisenhower Matrix, tasks that are urgent and important should be:", options: ["Delegated to someone else", "Completed immediately", "Scheduled for later", "Ignored completely"] },
+          { question: "What is the first step in developing leadership skills?", options: [" Ignoring weaknesses", "Understanding strengths, weaknesses, and emotions", "Avoiding self-reflection", "Controlling others"] },
 
-          { question: "What does the Pareto Principle (80/20 rule) suggest? ", options: ["80% of results come from 20% of efforts.", "20% of results come from 80% of efforts.", "80% of tasks should be completed in 20% of the time.", "Effort and results are always equal."] },
+          { question: "Which type of leader makes decisions without consulting others?", options: ["Democratic", "Autocratic", " Laissez-Faire", "Transformational"] },
 
-          { question: "Which of the following strategies is most effective for minimizing distractions during work or study?", options: ["Keeping notifications on to stay updated.", "Working in a quiet and organized environment.", "Multitasking to get more done at once.", "Constantly checking social media for breaks."] },
+          { question: "A transformational leader primarily", options: ["Rewards employees for performance", "Gives full freedom to employees", "Inspires and motivates others toward a shared vision", "Makes decisions without consulting others"] },
 
-          { question: "When using the DO step in time management, which type of tasks should you focus on?", options: ["Tasks that are neither urgent nor important.", "Tasks that are urgent and important.", "Tasks that can be delegated to others.", "Tasks that are important but not urgent."] },
+          { question: "A democratic leader", options: ["Makes all decisions alone", "Gives full freedom without guidance", "Involves others in decision-making processes", "Focuses only on rewards and punishments"] },
 
-          { question: "Which of the following is a common mistake to avoid in time management?", options: ["Prioritizing tasks based on importance rather than urgency.", "Setting unrealistic deadlines for yourself.", "Breaking tasks into smaller, manageable parts.", "Allocating specific time blocks for focused work."] },
-
-          { question: "What’s the main difference between the Pareto 80/20 rule and the Eisenhower Matrix?", options: ["The Pareto rule focuses on results, while the Eisenhower Matrix focuses on urgency.", "The Pareto rule prioritizes tasks by effort, while the Eisenhower Matrix categorizes by importance.", "The Pareto rule schedules tasks, while the Eisenhower Matrix delegates them.",] },
-
-          { question: "Which of the following is the most effective approach to time management?", options: ["Focus only on urgent tasks, ignoring important ones.", "Work continuously without breaks to maximize productivity.", "Prioritize important tasks and manage time by setting clear goals.", "Complete tasks based on how easy or difficult they seem."] },
-
-          { question: "Which of the following is the best approach to improve focus on an individual task and ensure its effective completion?", options: ["Multitask to handle more tasks at once.", "Focus on one task at a time, setting clear goals and minimizing distractions.", "Switch between tasks frequently to maintain interest.", "Complete easy tasks first to feel productive."] },
-      ];
+        ];
   
-      const correctAnswers = [2, 2, 2, 1, 2, 2, 2, 1, 3, 2]; // Correct answer indexes (1-based)
+      const correctAnswers = [2, 2, 2, 2, 3, 2]; 
       const totalQuestions = questions.length;
       const answers = Array(totalQuestions).fill(null);
       let currentQuestion = null;
