--- a/Exam-Master-2.html
+++ b/Exam-Master-2.html
@@ -131,7 +131,7 @@
         },
         {
             question: "Problem solving skills help us to",
-            options: ["nderstand the environment", "Sticking to a predetermined solution", "refuse to adapt", "ignoring evidence and facts"],
+            options: ["Understand the environment", "Sticking to a predetermined solution", "refuse to adapt", "ignoring evidence and facts"],
             answer: 0
         },
         {
