editing html and css file

--- a/Exam-Master.html
+++ b/Exam-Master.html
@@ -9,7 +9,7 @@
     <!-- Add these links in your HTML head section -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="ExamMaster.css">
 <link rel="stylesheet" href="">
 
 
