--- a/Exam-Master.html
+++ b/Exam-Master.html
@@ -10,15 +10,14 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="ExamMaster.css">
-<link rel="stylesheet" href="">
 
 
 </head>
 <body>
     <!-- Header -->
     <div class="header">
-        <div id="ExamMasterDiv">
-            <h1>Exam Master</h1>
+        <div class="logoImg" id="ExamMasterDiv">
+            <img src="logo.png" alt="">
         </div>
         <!-- <div id="studentDetails">hello</div> -->
         <div id="timer">Time Left: 15:00</div>
