finalized logo in branch1

--- a/Exam-Master.html
+++ b/Exam-Master.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <div class="header">
         <div class="logoImg" id="ExamMasterDiv">
-            <img src="logo.png" alt="">
+            <img src="logo2.png" alt="">
         </div>
         <!-- <div id="studentDetails">hello</div> -->
         <div id="timer">Time Left: 15:00</div>
