--- a/Exam-Master.html
+++ b/Exam-Master.html
@@ -32,12 +32,13 @@
                 
                 <form id="loginForm">
                     <div class="mb-3">
-                        <label for="studentName" class="form-label">Name:</label>
-                        <input type="text" id="studentName" class="form-control" required>
+                        <label for="studentName" class="form-label"></label>
+                        <input type="text" id="studentName" 
+                        class="form-control" required value="Enter your name">
                     </div>
                     <div class="mb-3">
-                        <label for="rollNumber" class="form-label">Roll Number:</label>
-                        <input type="text" id="rollNumber" class="form-control" required>
+                        <label for="rollNumber" class="form-label"></label>
+                        <input type="text" id="rollNumber" class="form-control" required value="Enter your roll number">
                     </div>
                     <div id="submitButton">
                         <button type="submit" class="btn btn-primary">Submit</button>
