container of question panel highlighted green1

--- a/Exam-Master.html
+++ b/Exam-Master.html
@@ -104,7 +104,7 @@
             <div class="row">
                 <!-- Sidebar for Question Numbers -->
                 <div class="col-md-3">
-                    <div class="border p-3 question-panel">
+                    <div class="question-panel">
                         <h5 class="mb-3">Questions</h5>
                         <div id="questionNumbers"></div>
                     </div>
